--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -171,6 +171,7 @@
    .credit-2{
     padding-left: 0;
     margin-top: 40px;
+    margin-bottom: 40px;
    }
   }
 @media only screen and (max-width: 767px) {
