--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -26,6 +26,8 @@
     border-top: 1.5px solid #00805f;
 }
 
-/* tbody, thead{
-    display: block;
-} */
+@media only screen and (max-width: 414px) {
+   table thead tr th{
+    font-size: 12px;
+   }
+  }
